--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <title>My Engine</title>
     <link rel="icon" href="icon.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap" rel="stylesheet">
     
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
+    <script src="p5.js"></script>
 
     <script src="engine/collisions/checks.js"></script>
     <script src="engine/collisions/reslove.js"></script>
     
+    <script src="engine/engine.js"></script>
     <script src="engine/scene.js"></script>
     <script src="engine/particle.js"></script>
     <script src="engine/camera.js"></script>
@@ -30,5 +29,5 @@
     </div>
     <div id="main"></div>
     <script src="index.js"></script>
-</body>
-</html>
+
+</body></html>
